@@ -1,5 +1,6 @@
 5.3.0:
 - New: another autumnal Pixel 6 wallpaper!
+- New: additional Dracula theme color variants in the Pixel 4 Doodle collection
 - New: battery saver options for page swipe animation, tilt and zoom effects
 - New: Finnish translation
 - Improved: splash screen background color on Android 12
